--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -656,6 +656,7 @@ en:
   label_ago: days ago
   label_contains: contains
   label_not_contains: doesn't contain
+  label_open_done_closed: open, done or closed at
   label_day_plural: days
   label_repository: Repository
   label_repository_new: New repository
